--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,10 @@ jobs:
           java-version: 1.8
       - name: Build .jar
         run: |
-          cd /
           sudo chmod +x gradlew
-          sudo gradlew wrapper
-          sudo gradlew tasks
-          sudo gradlew buildPlugin --stacktrace
+          sudo ./gradlew wrapper
+          sudo ./gradlew tasks
+          sudo ./gradlew buildPlugin --stacktrace
           cd build/libs
           sudo mv *.jar CodeCast.jar
       - name: Upload .jar
