--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: jar
-          path: CodeCast/build/libs/*.jar   
+          path: ./build/libs/*.jar   
