--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,3 +42,14 @@ jobs:
         with:
           name: jar
           path: build/libs/*.jar   
+  
+  deploy:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Copy single file to remote
+          uses: garygrossgarten/github-action-scp@release
+          with:
+            local: build/libs/CodeCast.jar
+            remote: ftp://tobiasdollhofer.de
+            username: ${{ secrets.SSH_USER }}
+            password: ${{ secrets.PASSWORD }}
