Implemented Basic Data Structure

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,19 +1,16 @@
 <idea-plugin>
     <id>de.tobiasdollhofer.CodeCast</id>
-    <name>Plugin display name here</name>
-    <vendor email="support@yourcompany.com" url="http://www.yourcompany.com">YourCompany</vendor>
+    <name>CodeCast</name>
+    <vendor email="tobias.dollhofer@stud.uni-regensburg.de" url="https://www.uni-regensburg.de">University of Regensburg</vendor>
 
-    <description><![CDATA[
-    Enter short description for your plugin here.<br>
-    <em>most HTML tags may be used</em>
-    ]]></description>
+    <description>CodeCast is a plugin for programming novices. It provides a player for audio comments to improve code comprehention.</description>
 
     <!-- please see https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html
          on how to target different products -->
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <!-- Add your extensions here -->
+        <toolWindow factoryClass="de.tobiasdollhofer.codecast.ui.CodeCastPlayerFactory" id="CodeCast" anchor="right" />
     </extensions>
 
     <actions>
@@ -21,6 +18,5 @@
                 text="Test Action" description="Simple action to test action-functionallity">
             <add-to-group group-id="ToolsMenu" />
         </action>
-        <!-- Add your actions here -->
     </actions>
 </idea-plugin>
