--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.intellij' version '0.7.3'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
 group 'de.tobiasdollhofer'
@@ -28,6 +29,12 @@ intellij {
         targetCompatibility = '1.8'
     }
 }
+
+javafx {
+    version = "11.0.2"
+    modules = [ 'javafx.media']
+}
+
 patchPluginXml {
     changeNotes """
       Add change notes here.<br>
