--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'de.tobiasdollhofer'
-version '0.0.1'
+version '0.0.2'
 
 repositories {
     mavenCentral()
@@ -39,8 +39,7 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
+      Automatic playlist generation from comments with automatic download from remote url"""
 }
 test {
     useJUnitPlatform()
