implemented working gutter icon

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,6 +8,7 @@
     <!-- please see https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html
          on how to target different products -->
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.java</depends>
     <!-- <depends>com.intellij.javafx</depends>-->
 
     <extensions defaultExtensionNs="com.intellij">
@@ -17,6 +18,7 @@
                         serviceInterface="de.tobiasdollhofer.codecast.player.service.PlaylistService" />
         <projectService serviceImplementation="de.tobiasdollhofer.codecast.player.service.PlayerManagerServiceImpl"
                         serviceInterface="de.tobiasdollhofer.codecast.player.service.PlayerManagerService" />
+        <codeInsight.lineMarkerProvider language="JAVA" implementationClass="de.tobiasdollhofer.codecast.player.ui.CodeCastLineMarkerProvider" />
     </extensions>
 
     <actions>
