--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'de.tobiasdollhofer'
-version '0.0.2'
+version '0.0.3'
 
 repositories {
     mavenCentral()
@@ -40,7 +40,7 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      Automatic playlist generation from comments with automatic download from remote url"""
+      new Playlist-UI, new comment structure, caching in user-home"""
 }
 test {
     useJUnitPlatform()
