created dummy help-tab

--- a/src/main/resources/ui_text.properties
+++ b/src/main/resources/ui_text.properties
@@ -18,6 +18,7 @@ download_canceled=Download was canceled. Please reset Player.
 folding_group_name=CodeCast
 folding_placeholder_text=codecast
 window_displayName=CodeCast
+help_displayName=Help
 notification_group_name=CodeCastNotifier
 download_task_title=Downloading CodeCast Audiofiles...
 file_already_exist=There is already a file called: 
