--- a/src/main/resources/ui_text.properties
+++ b/src/main/resources/ui_text.properties
@@ -23,3 +23,9 @@ notification_group_name=CodeCastNotifier
 download_task_title=Downloading CodeCast Audiofiles...
 file_already_exist=There is already a file called: 
 download_failed_exception=No file to download. Server replied HTTP code:
+help_introduction=CodeCast is a plugin developed for the bachelor thesis of Tobias Dollhofer, University of Regensburg. It provides the ability to play audio comments to explain specific code snippets as well as a function to show the explained code snipped directly in the editor.
+help_reload=You can use this reload button, if something does not work correctly. By clicking it will reintialize the playlist and the player.
+help_autoplay=You can enable or disable autoplay. That means that the whole playlist will be played in the right order. In combination with the enabled jump-to-code feature you can get an automatic walkthrough through the project.
+help_jumpToCode=Enable or disable jump-to-code. With this feature enabled the sourcecode depending to this comment will be shown in your editor window. So you can interact with the sourcecode while the audio description of it will be played.
+help_showCode=Push this button to go to the code snippet where the current played comment belongs to.
+help_gutterIcon=You can hit this icon to get an audio explaination of this code passage. 
