--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -10,6 +10,7 @@
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.java</depends>
     <depends>com.intellij.javafx</depends>
+    <depends>de.tobiasdollhofer.CodeCastFragebogen</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <notificationGroup id="CodeCastNotifier" displayType="BALLOON"/>
