--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'de.tobiasdollhofer'
-version '0.0.7'
+version '0.0.8'
 
 repositories {
     mavenCentral()
@@ -24,6 +24,7 @@ dependencies {
 javafx {
     version = "11.0.2"
     modules = [ 'javafx.media']
+    configuration = "compileOnly"
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
@@ -42,7 +43,7 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      Logging adjustments"""
+      fixed bug where javafx forced app crash on mac and linux"""
 }
 test {
     useJUnitPlatform()
