--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'de.tobiasdollhofer'
-version '0.0.8'
+version '0.0.9'
 
 repositories {
     mavenCentral()
@@ -43,7 +43,7 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      fixed bug where javafx forced app crash on mac and linux"""
+      fixed bug where jump to code didn't work properly"""
 }
 test {
     useJUnitPlatform()
