--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'de.tobiasdollhofer'
-version '0.0.10'
+version '0.0.11'
 
 repositories {
     mavenCentral()
@@ -43,7 +43,7 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      fixed bug where jump to code didn't work properly, minor usability adjustments"""
+      minor bugfixes and adjustments"""
 }
 test {
     useJUnitPlatform()
