new texts, improved player ui

--- a/src/main/resources/ui_text.properties
+++ b/src/main/resources/ui_text.properties
@@ -1,9 +1,11 @@
-codecast_description=Here you can see all audio comments for this project.
+codecast_description=You can get spoken explanations for this project with the playlist below. Play comment by comment or select a specific comment in the list.
+codecast_description_no_comments=Normally here would be a playlist with spoken explanations for this project. Unfortunately this is no codecast project because there aren't any comments.
 tooltip_reloadButton=Reload codecast playlist
 tooltip_autoplayButton=Enable / Disable Autoplay
 tooltip_jumpToCodeButton=Enable / Disable Automatic Jump to Code
 tooltip_currentComment=Currently played Comment
 no_comment_available=There are no  codecast comments available in this project. 
+comments_loading=Loading codecast comments for this project.
 tooltip_playFirst=Play first comment of playlist
 tooltip_playPrevious=Play previous comment
 tooltip_playPause=Play / Pause
